--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
+    "webgl-strict-types": "^1.0.5",
     "webpack": "^5.74.0"
   },
   "devDependencies": {
