--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "open": "^8.4.0",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
     "webgl-strict-types": "^1.0.5",
@@ -11,5 +12,9 @@
   },
   "devDependencies": {
     "webpack-cli": "^4.10.0"
+  },
+  "scripts": {
+    "build": "yarn webpack",
+    "start": "yarn build && open static/index.html"
   }
 }
