--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "open": "^8.4.0",
+    "prettier": "^2.7.1",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
     "webgl-strict-types": "^1.0.5",
@@ -15,6 +16,7 @@
   },
   "scripts": {
     "build": "yarn webpack",
-    "start": "yarn build && open static/index.html"
+    "start": "yarn build && open static/index.html",
+    "format:fix": "prettier --write ."
   }
 }
